# Hydrogen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  test.lua
benchmark/hydrogen/: fib.hy
benchmark/python/: fib.py  prime.py
benchmarks/: fibonacci.hy  interpreter.c  run.c  run.go  sum.hy
benchmarks/hydrogen/: fib.hy  prime.hy
benchmarks/lua/: fib.lua  prime.lua  sum.lua
benchmarks/python/: fib.py  sum.py
design/: features.md  notes.md  optimisations.md  standard-library.md  stdlib.md  todo.md  writing-a-language.md
include/: hydrogen.h  hylib.h  hyrogen.h  hystdlib.h
src/: README.md  bytecode.c  bytecode.h  compiler.c  compiler.h  debug.c  debug.h  error.c  error.h  expression.c  expression.h  hydrogen.c  lexer.c  lexer.h  main.c  operators.c  operators.h  parser.c  parser.h  value.c  value.h  vm.c  vm.h
src/cli/: CMakeLists.txt  config.c  config.h  err.c  err.h  help.c  help.h  main.c  repl.c  repl.h
src/common/: defines.h  vec.h
src/core/: bytecode.h  debug.c  debug.h  err.c  err.h  exec.c  exec.h  fn.c  fn.h  import.c  import.h  ins.h  jmp.c  jmp.h  lexer.c  lexer.h  lib.c  lib.h  parser.c  parser.h  pkg.c  pkg.h  state.c  state.h  struct.c  struct.h  value.c  value.h  vm.c  vm.h
src/lib/: io.c  io.h  lib.c  lib.h  operator.c  operator.h  str.c  str.h
src/std/: CMakeLists.txt  err.c  io.c  io.h  std.c
src/vm/: CMakeLists.txt  README.md  bytecode.c  bytecode.h  debug.c  debug.h  err.c  err.h  error.c  error.h  fn.c  fn.h  gc.c  gc.h  import.c  ins.h  jmp.h  lexer.c  lexer.h  parser.c  parser.h  pkg.c  pkg.h  struct.c  struct.h  util.c  util.h  value.c  value.h  vec.h  vm.c  vm.h
src/vm/parser/: assign.c  assign.h  expr.c  expr.h  fn.c  fn.h  if.c  if.h  import.c  import.h  jmp.c  jmp.h  lexer.c  lexer.h  local.c  local.h  loop.c  loop.h  parser.c  parser.h  struct.c  struct.h
test/: README.md  test.c  test.h  test_bytecode.cpp  test_expr.cpp  test_fn.cpp  test_if.cpp  test_import_path.cpp  test_jmp.cpp  test_lexer.cpp  test_runtime.cpp  test_struct.cpp  test_upvalue.cpp  test_while.cpp
test/mock/: mock_fn.c  mock_fn.h  mock_lexer.c  mock_lexer.h  mock_parser.c  mock_parser.h
test/parser/: test.h  test_array.c  test_expr.c  test_expr.cpp  test_fn.c  test_fn.cpp  test_if.c  test_if.cpp  test_import.c  test_import.cpp  test_ins.c  test_ins.cpp  test_jmp.c  test_jmp.cpp  test_lexer.c  test_lexer.cpp  test_loop.c  test_loop.cpp  test_struct.c  test_struct.cpp  test_vec.c  test_vec.cpp  test_while.c  test_while.cpp
test/runtime/: test_runtime.py
test/runtime/assign/: stack.hy  top_level.hy
test/runtime/assignment/: scope.hy
test/runtime/closure/: upvalues.hy
test/runtime/comments/: block.hy  line_eof.hy
test/runtime/expr/: arithmetic.hy  comparison.hy  complex_comparison.hy  concat.hy  folding.hy  unary.hy
test/runtime/fail/: test.hy
test/runtime/fail/assignment/: already_defined.hy  let_expected_equals.hy  let_expected_identifier.hy  missing_expr.hy
test/runtime/fail/block/: missing_brace.hy  missing_brace_nested.hy
test/runtime/fail/closure/: missing_arg.hy  missing_args.hy
test/runtime/fail/comments/: missing_nested_terminator.hy  missing_terminator.hy
test/runtime/fail/expr/: add_invalid_operand.hy  call_non_fn.hy  divide_by_zero.hy  expected_operand.hy  index_no_identifier.hy  index_non_local_compile.hy  missing_quote.hy  missing_terminator.hy  negation_invalid_operand.hy  pkg_no_field.hy  pkg_no_index.hy  pkg_undefined_field.hy  undefined_variable.hy
test/runtime/fail/fn/: lone_return.hy  missing_arg.hy  missing_args.hy  missing_comma.hy  missing_name.hy  missing_terminator.hy
test/runtime/fail/if/: else_condition.hy  missing_condition.hy  missing_else_if_condition.hy  missing_open.hy
test/runtime/fail/import/: already_imported.hy  invalid_path.hy  missing_close.hy  multiline.hy  undefined_import.hy
test/runtime/fn/: call.hy  recursion.hy
test/runtime/if/: complex_condition.hy  fold.hy  if.hy  if_else.hy  if_elseif.hy  if_elseifs.hy  if_elseifs_else.hy  nested.hy
test/runtime/loop/: basic.hy  nested.hy
test/runtime/struct/: constructors.hy  fields.hy  methods.hy
test/runtime/while/: break.hy  fold.hy  nested.hy  nested_break.hy
tests/: CMakeLists.txt  runtime.c  test.h  test_assign.cpp  test_bytecode.c  test_compiler.c  test_expr.c  test_expr.cpp  test_expression.c  test_fn.c  test_fn.cpp  test_if.c  test_if.cpp  test_import_path.cpp  test_jmp.c  test_jmp.cpp  test_lexer.c  test_lexer.cpp  test_loop.c  test_loop.cpp  test_parser.c  test_runtime.cpp  test_struct.c  test_struct.cpp  test_upvalue.c  test_upvalue.cpp  test_value.c  test_while.c  test_while.cpp
tests/runtime/: basic.hy
tests/runtime/assign/: simple.hy  stack.hy  top_level.hy
tests/runtime/assignment/: 2.hy  4.hy  5.hy  6.hy
tests/runtime/classes/: 1.hy  2.hy  3.hy
tests/runtime/closure/: 1.hy  13.hy  2.hy  7.hy  upvalues.hy
tests/runtime/closures/: 10.hy  11.hy  12.hy  2.hy  3.hy  6.hy  8.hy  9.hy
tests/runtime/comments/: 1.hy  2.hy
tests/runtime/expr/: arithmetic.hy  comparison.hy
tests/runtime/fn/: 1.hy  3.hy  6.hy  8.hy  9.hy  call.hy
tests/runtime/function_expressions/: 1.hy  2.hy  3.hy
tests/runtime/functions/: 10.hy  11.hy  12.hy  2.hy  4.hy  5.hy  7.hy
tests/runtime/if/: 1.hy  10.hy  11.hy  12.hy  13.hy  2.hy  3.hy  4.hy  5.hy  6.hy  7.hy  8.hy  9.hy  complex_condition.hy  if_elseif.hy  if_elseif_else.hy  if_elseifs.hy  nested.hy
tests/runtime/loop/: 1.hy  2.hy  3.hy
tests/runtime/methods/: 1.hy  2.hy  3.hy  4.hy  5.hy  6.hy  7.hy  8.hy
tests/runtime/struct/: fields.hy  instantiation.hy  methods.hy
tests/runtime/structs/: 1.hy  2.hy  3.hy
tests/runtime/variables/: 1.hy  3.hy
tests/runtime/while/: 1.hy  10.hy  2.hy  3.hy  4.hy  5.hy  6.hy  7.hy  8.hy  9.hy  basic.hy
tests/units/: test.h  test_anonymous_functions.c  test_assignment.c  test_classes.c  test_closures.c  test_compiler.c  test_expression.c  test_function_calls.c  test_function_definitions.c  test_if.c  test_lexer.c  test_method_definitions.c  test_parser.c  test_structs.c  test_value.c  test_while.c
(+37 files in other folders)
